<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="moveActivity">Pindah Activity</string>
    <string name="moveWithData">Pindah Activity Dengan Data</string>
    <string name="moveWithObject">Pindah Activity Dengan Object</string>
    <string name="dialNumber">Dial a Number</string>
    <string name="moveWithResult">Pindah Activity Untuk Result</string>
    <string name="resultFromActivity">Hasil Dari Activity</string>
    <string name="chooseNumber">Pilih Angka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="dataReceived">Data Diterims</string>
    <string name="objectReceiver">Object Diterims</string>
    <string name="thisIsMoveActivity">Ini Move Activity</string>
</resources>